Add intro and ending and everything inbetween

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,8 +1,12 @@
 [application]
 
 name="LD38"
-main_scene="res://main.tscn"
+main_scene="res://scene/intro.tscn"
 icon="res://icon.png"
+
+[autoload]
+
+Transition="*res://scene/transition.scn"
 
 [display]
 
