--- a/export.cfg
+++ b/export.cfg
@@ -234,12 +234,12 @@ version/name="1.0"
 browser/enable_run=false
 custom_package/debug=""
 custom_package/release=""
-debug/debugging_enabled=true
+debug/debugging_enabled=false
 html/controls_enabled=true
 html/font_family="arial,sans-serif"
 html/head_include=""
 html/style_include=""
-html/title=""
+html/title="The Seesaw Redemption"
 options/memory_size=3
 
 [platform:Linux X11]
